# openclaw

./: .gitignore
.agent/skills/dual-model-orchestration/: SKILL.md
.agent/skills/dual-model-orchestration/templates/: code_report_template.md
.agent/skills/iterative-plan-refinement/: SKILL.md
.agent/workflows/: crate-audit.md  dual-model.md  phased-build.md
keyvault/: Cargo.toml
keyvault-package/: README.md  install.sh
keyvault-package/skills/dual-model-orchestration/templates/: code_spec_template.md
keyvault-package/src/: lib.rs
keyvault-package/src/adapters/: deepseek.rs  mod.rs
keyvault-package/src/discovery/: mod.rs
keyvault-package/src/orchestrator/: mod.rs
keyvault-package/src/pool/: classifier.rs  rate_tracker.rs
keyvault-package/src/vault/: mod.rs  store.rs
keyvault/src/: auth.rs  main.rs
keyvault/src/adapters/: anthropic.rs  google.rs  groq.rs  openai.rs  perplexity.rs
keyvault/src/discovery/: poller.rs
keyvault/src/pool/: mod.rs  registry.rs  swarm.rs
keyvault/src/server/: mod.rs
rust/: Cargo.toml  config.json  package.json  sessions.json  test_client.cjs
rust/agent/: Cargo.toml
rust/agent/src/: lib.rs
rust/agent/src/llm/: openai.rs
rust/channels/discord/: Cargo.toml
rust/channels/discord/src/: handler.rs  lib.rs
rust/channels/telegram/: Cargo.toml
rust/channels/telegram/src/: handler.rs  lib.rs
rust/channels/whatsapp/: Cargo.toml
rust/channels/whatsapp/src/: lib.rs
rust/common/: Cargo.toml
rust/common/src/: config.rs  lib.rs  protocol.rs  session.rs
rust/gateway/: Cargo.toml
rust/gateway/src/: main.rs  session.rs
