[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
telegram = { path = "../channels/telegram" }
discord = { path = "../channels/discord" }
whatsapp = { path = "../channels/whatsapp" }
agent = { path = "../agent" }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
