[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
agent = { path = "../../agent" }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"
